ingested olist e-commerce data and created the staging model for the first table

--- a/dbt_practice/dbt_project.yml
+++ b/dbt_practice/dbt_project.yml
@@ -32,9 +32,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_practice:
     staging:
-      +schema: jelte_stg_calls
-      +materialized: table
-    intermediate:
-      +schema: jelte_int_calls
+      +schema: jelte_staging
       +materialized: table
     
